crates/ruff_python_parser/tests/snapshots/invalid_syntax@decorator_unexpected_token.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/decorator_unexpected_token.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..34,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..4,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 0..4,
                            node_index: NodeIndex(None),
                            expression: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 1..4,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name(""),
                        range: 4..4,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 4..4,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [],
                    is_trailing_lambda: false,
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 5..22,
                    is_async: true,
                    items: [
                        WithItem {
                            range: 16..17,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 16..17,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 19..22,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 19..22,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 23..27,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 23..27,
                            node_index: NodeIndex(None),
                            expression: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 24..27,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name(""),
                        range: 27..27,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 27..27,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [],
                    is_trailing_lambda: false,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 28..33,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 28..29,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 32..33,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | @foo
2 | async with x: ...
  | ^^^^^ Syntax Error: Expected class, function definition or async function definition after decorator
3 | @foo
4 | x = 1
  |


  |
2 | async with x: ...
3 | @foo
4 | x = 1
  | ^ Syntax Error: Expected class, function definition or async function definition after decorator
  |
